k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openstack-portal
  labels:
    app.kubernetes.io/part-of: openstack-portal
